--- a/src/components/Skill/about.css
+++ b/src/components/Skill/about.css
@@ -22,14 +22,30 @@
    font-family: Arial, Helvetica, sans-serif;
    color:rgb(193, 209, 210);
 }
-button{
-    margin:5px;
-    background-color: antiquewhite;
-    width:6rem;
-    height:2.5rem;
+.container1 button{
+    /* margin:5px; */
+    background: transparent;
+    color:antiquewhite;
+   
+    /* background-color: antiquewhite; */
+    width:7rem;
+    height:3rem;
     font-size:15px;
     font-weight:600;
     letter-spacing: 1px;
+    border-radius: 20px;
+
+    margin: 0 20px 15px 0;
+    padding: 5px 10px;
+    border: 1px solid #f1b631;
+    /* display: flex;
+    /* flex-direction: column; */
+    /* align-items: center;
+    transition: background-color .3s ease-in-out; 
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: 1px solid #f1b631;
+    transition: background-color .3s ease-in-out; */ 
 }
 .item1{
     position:relative;
@@ -87,12 +103,20 @@ margin-right:7rem;
 
 @media screen and (max-width:480px){
     .container1{
-        top:-180vh;
-        left:40rem;
+        top:2vh;
+        /* left:40rem;/ */
         margin-right:0;
-        min-width:20rem;
+        min-width:50rem;
+        padding-top:50px;
+        padding-bottom: 50px;
     }
     .container{
         min-width:45rem;
+    }
+    .desc{
+        width:150%;
+    }
+    .container1 .item2{
+        padding-bottom:50px;
     }
 }
