css update for the projects

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -4,8 +4,8 @@
     border-radius:50px;
     cursor: pointer;
     width:400px;
-    background-color: aquamarine;
-    padding:10px;
+    background-color: #ff7faf;
+    padding:4px;
 }
 .projects h1{
 
